--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
 	"description": "API project for freeCodeCamp",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"dev": "nodemon server"
 	},
 	"dependencies": {
 		"express": "^5.0.0-alpha.2",
 		"cors": "^2.8.1",
-		"dotenv": "^8.2.0"
+		"dotenv": "^8.2.0",
+		"nodemon": "^2.0.15"
 	},
 	"repository": {
 		"type": "git",
